--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,3 @@
-/* index.css */
 @import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@300;400;500;600;700&display=swap");
 
@@ -13,18 +12,17 @@
 }
 
 .fade-enter {
-  @apply opacity-0;
+  @apply opacity-0 translate-y-10;
 }
 
 .fade-enter-active {
-  @apply opacity-100 transition-opacity duration-500 delay-100 ease-in-out;
+  @apply opacity-100 translate-y-0 transition-all duration-700 delay-100 ease-in-out;
 }
 
 .fade-exit {
-  @apply opacity-100;
+  @apply opacity-100 translate-y-0;
 }
 
 .fade-exit-active {
-  @apply opacity-0 transition-opacity duration-500 delay-100 ease-in-out;
+  @apply opacity-0 translate-y-10 transition-all duration-700 delay-100 ease-in-out;
 }
-
